--- a/web/style.css
+++ b/web/style.css
@@ -36,6 +36,11 @@ body {
   background-color: var(--gray-bg);
 }
 
+input,
+button {
+  font: inherit;
+}
+
 .container {
   max-width: 1280px;
   margin: auto;
@@ -73,6 +78,24 @@ body {
 #bulk-controls {
   border-bottom: 1px solid var(--btn-hover);
 }
+
+.mobile-toggle {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0.25em 1em;
+  border: 0;
+  border-top: 1px solid var(--btn-hover);
+  background-color: #fff;
+}
+.toggle-icon::before {
+  font-weight: bold;
+  content: "↓";
+}
+.is-open .toggle-icon::before {
+  content: "↑";
+}
+
 .deck-list {
   margin: 0;
   padding: 0.5rem 0;
@@ -208,20 +231,27 @@ pre {
 }
 .checkout-btn {
   display: block;
-  flex-grow: 1;
+  flex: 1 1 0%;
   height: 3rem;
-  margin: 0.25em;
   margin-bottom: 0.375em;
   color: var(--black);
   padding: 0 1em;
   border: 0.25em solid var(--black);
+  border-right-width: 0;
   font-size: 0.875em;
   font-weight: bold;
   line-height: 1.15;
   background-color: var(--white);
-  border-radius: 0.5em;
+  border-radius: 0;
   box-shadow: 0 0.25em 0 0 var(--black);
   cursor: pointer;
+}
+.checkout-btn:first-of-type {
+  border-radius: 0.5em 0 0 0.5em;
+}
+.checkout-btn:last-of-type {
+  border-right-width: 0.25em;
+  border-radius: 0 0.5em 0.5em 0;
 }
 .checkout-btn:hover,
 .checkout-btn:focus {
@@ -247,9 +277,14 @@ pre {
   flex: 1 1 0%;
 }
 .flex-break {
-    flex-basis: 100%;
-    height: 0;
-    content: "";
+  flex-basis: 100%;
+  height: 0;
+  content: "";
+}
+@media (max-width: 991px) {
+  .hidden-sm {
+    display: none;
+  }
 }
 @media (min-width: 992px) {
   .flex-lg {
@@ -258,6 +293,8 @@ pre {
   .checkout-btn {
     flex: none;
     display: table;
+    margin: 0.25em;
+    border-radius: 0.5em;
   }
   .hidden-lg {
     display: none;
@@ -299,4 +336,51 @@ pre {
 
 .hidden {
   display: none;
+}
+
+/* Screen-reader only */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  /* prevent contrast warnings */
+  color: #000;
+  background-color: #fff;
+}
+
+@media (max-width: 991px) {
+  .sr-only-sm {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    /* prevent contrast warnings */
+    color: #000;
+    background-color: #fff;
+  }
+  .sr-only-sm:focus,
+  .sr-only-sm:focus-within {
+    position: static;
+    width: auto;
+    height: auto;
+    overflow: visible;
+    clip: auto;
+  }
+}
+
+.sr-only:focus,
+.sr-only:focus-within,
+.not-sr-only {
+  position: static;
+  width: auto;
+  height: auto;
+  overflow: visible;
+  clip: auto;
 }
